<resources>
    <string name="app_name">Planets</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="title">title</string>
    <string name="desc">desc</string>
    <string name="next">Далее</string>
    <string name="solar_system">SOLAR SYSTEM</string>
    <string name="planets">Planets</string>
    <string name="stars">Stars</string>
    <string name="name_planets">NAME</string>
    <string name="info">Info</string>
    <string name="love">Love</string>
    <string name="general">General</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="prognoz">Прогноз</string>
    <string name="save">Save</string>
    <string name="sign">Вход</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="not_account">нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registers">Регистрация</string>
    <string name="fname">Фамилия</string>
    <string name="sname">Имя</string>
    <string name="have_account">есть аккаунт?</string>
    <string name="user_name">USER_Name</string>
    <string name="sign_in">Войти</string>
    <string name="exit">Выйти</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
</resources>