<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_auth"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authorization.AuthorizationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginHorizontal="16dp"
            android:paddingStart="16dp"
            app:hintTextColor="@color/black"
            android:background="@drawable/bg_et_auth">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingVertical="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:layout_marginHorizontal="16dp"
            android:paddingStart="16dp"
             app:passwordToggleEnabled="true"
            app:hintTextColor="@color/black"
            android:background="@drawable/bg_et_auth">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingVertical="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cornerRadius="16dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/brown"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:paddingVertical="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/not_account"
    android:textColor="@color/white"
    />
    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/brown"
        android:textSize="18sp"
        android:layout_marginStart="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>